# game2unit

./: .clippy.toml  Cargo.toml  README.md  game2unit
launchers/: heroic.nu  minecraft-prism.nu  steam.nu
src/: env.rs  handlers.rs  launcher.rs  main.rs  sources.rs  systemd.rs  unit_launcher.rs
src/sources/: steam.rs
src/sources/steam/: shortcut.rs  steam_app.rs
src/systemd/: unit_name.rs
src/systemd/unit_name/: str.rs
